@@ -21,7 +21,7 @@ my %WriteMakefileArgs = (
     "Encode" => 0,
     "HTTP::Tiny" => 0,
     "HTTP::Tiny::UA::Response" => 0,
-    "JSON" => 0,
+    "JSON::MaybeXS" => 0,
     "Moo" => "1.000008",
     "Moo::Role" => 0,
     "Scalar::Util" => 0,
@@ -49,7 +49,7 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "HTTP::Tiny" => 0,
   "HTTP::Tiny::UA::Response" => 0,
-  "JSON" => 0,
+  "JSON::MaybeXS" => 0,
   "Moo" => "1.000008",
   "Moo::Role" => 0,
   "Scalar::Util" => 0,
