@@ -4,12 +4,13 @@ Release history for Net-Travis-API
  - Now uses Travis-CI API-v2 by default for all queries. Can be overridden by explicit use of an alternative
    "http_default_accept_headers" or by having a predefined "Accept" value in HTTP::Tiny's default_headers parameter.
    @zmughal++ closes #3, closes #4
+ - JSON::MaybeXS now used instead of JSON.pm
 
  [Dependencies::Stats]
  - Dependencies changed since 0.001001, see misc/*.deps* for details
  - configure: +1 ↓1 (recommends: ↑1)
  - develop: +18 ↑3 -6 (recommends: +1, suggests: +2 -1)
- - runtime: ↑1 -1 (recommends: +1)
+ - runtime: +1 ↑1 -2 (recommends: +1)
  - test: +2 -3 (recommends: ↑2 ↓1 -1)
 
 0.001001 2014-04-22T11:33:16Z
